# berg

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  apache-iceberg-rust-invalid-utf8-bounds-issue.md  mise.toml  rust-toolchain.toml
.github/workflows/: ci.yml
crates/berg-cli/: Cargo.toml
crates/berg-cli/src/: main.rs
crates/berg-core/: Cargo.toml
crates/berg-core/src/: document.rs  engine.rs  error.rs  lib.rs  report.rs  view.rs
crates/berg-tui/: Cargo.toml
crates/berg-tui/src/: main.rs
