[workspace]
members = [
    "crates/berg-cli",
    "crates/berg-tui",
    "crates/berg-core",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Paul Roman", "Berg contributors"]
repository = "https://github.com/<OWNER>/berg"
homepage = "https://github.com/<OWNER>/berg"
description = "Inspect and manage Apache Iceberg tables from your terminal"
keywords = ["iceberg", "data", "lakehouse", "tui", "cli"]
categories = ["command-line-utilities", "database"]

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
iceberg = "0.9"
iceberg-catalog-rest = "0.9"
iceberg-storage-opendal = "0.9"
ratatui = "0.30.0"
thiserror = "2.0.18"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

berg-core = { version = "0.1.0", path = "crates/berg-core" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
