[workspace]
members = [
    "crates/berg-cli",
    "crates/berg-tui",
    "crates/berg-core",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Paul Roman", "Berg contributors"]
repository = "https://github.com/romusz/berg"
homepage = "https://github.com/romusz/berg"
description = "Inspect and manage Apache Iceberg tables from your terminal"
keywords = ["iceberg", "data", "lakehouse", "tui", "cli"]
categories = ["command-line-utilities", "database"]

[workspace.dependencies]
anyhow = "1.0.102"
arrow-array = "57.3.0"
arrow-schema = "57.3.0"
async-trait = "0.1"
aws-config = "1"
aws-credential-types = "1"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
flate2 = "1"
iceberg = "0.9"
iceberg-catalog-rest = "0.9"
iceberg-storage-opendal = "0.9"
parquet = { version = "57.3.0", features = ["async"] }
ratatui = "0.30.0"
reqwest = "0.12"
serde_json = "1"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["formatting", "local-offset"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

berg-core = { version = "0.1.0", path = "crates/berg-core" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
