[package]
name = "berg-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "berg"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
berg-core.workspace = true
clap.workspace = true
time.workspace = true
tokio.workspace = true

[lints]
workspace = true
