[package]
name = "berg-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
iceberg.workspace = true
thiserror.workspace = true

[lints]
workspace = true
