[package]
name = "berg-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
arrow-array.workspace = true
async-trait.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
flate2.workspace = true
iceberg.workspace = true
iceberg-catalog-rest.workspace = true
iceberg-storage-opendal.workspace = true
parquet.workspace = true
reqwest.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true

[dev-dependencies]
arrow-schema.workspace = true

[lints]
workspace = true
