[package]
name = "berg-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "berg-tui"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
berg-core.workspace = true
crossterm.workspace = true
ratatui.workspace = true

[lints]
workspace = true
